src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Account where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Account where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Account where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Amount__c</fullName>
        <description>Sum of Amount field from related Credit records for this Calendar Year. Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>It&apos;s the credit amount calculated based on Dollar value of gifts and distribution % the organization decides to give. It is calculated based on the Gifts which were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Count__c</fullName>
        <description>Total Count of related Soft Credit records for this Calendar Year.Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Number of gifts on Account where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Deduct_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deduct value of Items from Giving Amount for match?</description>
        <inlineHelpText>Deduct value of Items from Giving Amount for match?</inlineHelpText>
        <label>Deduct Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Distribution_Frequency__c</fullName>
        <description>Frequency with which the organization gives for matching gifts.</description>
        <inlineHelpText>Frequency with which the organization gives for matching gifts.</inlineHelpText>
        <label>Distribution Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Amount__c</fullName>
        <description>Amount of first Hard Credit received on Account.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of first Hard Credit received on Account.</inlineHelpText>
        <label>First Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Date__c</fullName>
        <description>First Giving Date from the first Giving Summary tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Date first Hard Credit received on Account.</inlineHelpText>
        <label>First Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Amount__c</fullName>
        <description>Amount of first Recognition Credit received on Account.</description>
        <inlineHelpText>Amount of first Recognition Credit received on Account.</inlineHelpText>
        <label>First Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Date__c</fullName>
        <description>Date first Recognition Credit received on Account.</description>
        <inlineHelpText>Date first Recognition Credit received on Account.</inlineHelpText>
        <label>First Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Amount__c</fullName>
        <description>Amount of first ever related Soft Credit record. Check Track Soft Credits ? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of first Soft Credit received on Account.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Date__c</fullName>
        <description>Opportunity Close Date of first Soft Credit received on Account.Check Track Soft Credits ? field on Account to enable Rollup</description>
        <inlineHelpText>Date first Soft Credit received on Account.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Installments_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Installment pledges allowed for matching?</description>
        <inlineHelpText>Installment pledges allowed for matching?</inlineHelpText>
        <label>Installments Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by trigger, indicates Account is a Sustaining Giver.</description>
        <inlineHelpText>Indicates Account is a Sustaining Giver.</inlineHelpText>
        <label>Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Items_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Items allowed on matching pledges?</description>
        <inlineHelpText>Items allowed on matching pledges?</inlineHelpText>
        <label>Items Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Amount__c</fullName>
        <description>Largest Giving Amount from the first Giving Summary tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of largest Hard Credit received on Account.</inlineHelpText>
        <label>Largest Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Date__c</fullName>
        <description>Date largest Hard Credit received on Account.</description>
        <inlineHelpText>Date largest Hard Credit received on Account.</inlineHelpText>
        <label>Largest Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Amount__c</fullName>
        <description>Amount of largest Recognition Credit received on Account.</description>
        <inlineHelpText>Amount of largest Recognition Credit received on Account.</inlineHelpText>
        <label>Largest Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Date__c</fullName>
        <description>Close Date of Largest Giving from the first Giving Summary tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Date largest Recognition Credit received on Account.</inlineHelpText>
        <label>Largest Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Amount__c</fullName>
        <description>Amount of largest Soft Credit received on Account.Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of largest Soft Credit received on Account.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Date__c</fullName>
        <description>Opportunity Close Date of largest Soft Credit received on Account.Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Date largest Soft Credit received on Account.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Amount__c</fullName>
        <description>Most Recent Giving Amount from the last Giving Summary tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of last Hard Credit received on Account.</inlineHelpText>
        <label>Last Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Date__c</fullName>
        <description>Close Date of most recent Giving from the last Giving Summary tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Date last Hard Credit received on Account.</inlineHelpText>
        <label>Last Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Amount__c</fullName>
        <description>Amount of last Recognition Credit received on Account.</description>
        <inlineHelpText>Amount of last Recognition Credit received on Account.</inlineHelpText>
        <label>Last Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Date__c</fullName>
        <description>Date last Recognition Credit received on Account.</description>
        <inlineHelpText>Date last Recognition Credit received on Account.</inlineHelpText>
        <label>Last Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Amount__c</fullName>
        <description>Amount of most recent related Soft Credit record. Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Amount of last Soft Credit received on Account.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Date__c</fullName>
        <description>Close Date on Giving related to recent Soft Credit record. Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Date last Soft Credit received on Account.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Amount across all Lifetime Summaries (one per record type) tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Total dollar value of Hard Credits this Account has received.</inlineHelpText>
        <label>Lifetime Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Count__c</fullName>
        <description>Total count of Opportunities directly related to all all Lifetime Summaries (one per record type) tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Total number of gifts where this Account has received Hard Credits.</inlineHelpText>
        <label>Lifetime Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is a current Major Giver or was a Major Giver in the past. This field is automatically checked when a major gift comes in and will never be automatically unchecked.</description>
        <inlineHelpText>Account is a current Major Giver or was a Major Giver in the past. This field is automatically checked when a major gift comes in and will never be automatically unchecked.</inlineHelpText>
        <label>Lifetime Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is a current Sustaining Giver or was a Sustaining Giver in the past. This field is automatically checked when a sustaining gift comes in and will never be automatically unchecked.</description>
        <inlineHelpText>Account is a current Sustaining Giver or was a Sustaining Giver in the past. This field is automatically checked when a sustaining gift comes in and will never be automatically unchecked.</inlineHelpText>
        <label>Lifetime Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Amount__c</fullName>
        <description>Total dollar value of Recognition Credits this Account has received.</description>
        <inlineHelpText>Total dollar value of Recognition Credits this Account has received.</inlineHelpText>
        <label>Lifetime Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Count__c</fullName>
        <description>Total number of gifts where this Account has received Recognition Credits.</description>
        <inlineHelpText>Total number of gifts where this Account has received Recognition Credits.</inlineHelpText>
        <label>Lifetime Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Amount__c</fullName>
        <description>Sum of Amounts field from all Soft Credits this Account has received. Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Its the total value of Soft Credits this Account has received.</inlineHelpText>
        <label>Lifetime Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Count__c</fullName>
        <description>Total Count of Amounts from all related Soft Credit records.Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Total number of gifts where this Account has received Soft Credits.</inlineHelpText>
        <label>Lifetime Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Match_Ratio__c</fullName>
        <description>Percentage at which the organization will match associated gifts.</description>
        <inlineHelpText>Percentage at which the organization will match associated gifts.</inlineHelpText>
        <label>Match Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Ratio_Type__c</fullName>
        <description>Displays the Primary Matching Gift type for the Account. Value is updated based on MatchingRatio_UpdatePrimary , which pulls &apos;Matching Ratio Type’ value from linked Matching Ratio record where ‘Primary&apos; is selected.</description>
        <inlineHelpText>Displays the Primary Matching Gift type for the Account. Value is updated based on &apos;Matching Ratio Type&apos; field from Matching Ratio record where ‘Primary’ field is selected.</inlineHelpText>
        <label>Matching Ratio Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retiree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Maximum_Contribution__c</fullName>
        <description>Most the organization will match across aggregate of associated gifts.</description>
        <inlineHelpText>Most the organization will match across aggregate of associated gifts.</inlineHelpText>
        <label>Maximum Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Maximum_Matched__c</fullName>
        <description>Maximum amount the organization will match per individual.</description>
        <inlineHelpText>Maximum amount the organization will match per individual.</inlineHelpText>
        <label>Maximum Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Minimum_Matched__c</fullName>
        <description>Minimum amount threshold for matching per individual.</description>
        <inlineHelpText>Minimum amount threshold for matching per individual.</inlineHelpText>
        <label>Minimum Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pending_Payment_Details__c</fullName>
        <description>Manually populated notes or comments about a pending payment.</description>
        <inlineHelpText>Manually populated notes or comments about a pending payment.</inlineHelpText>
        <label>Pending Payment Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pending_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated field indicating when an organization or giving-level is set to Active Only On Payment, and at least one pledge has been made but no payments have been received, this field will be checked.</description>
        <inlineHelpText>When an organization or giving-level is set to Active Only On Payment, and at least one pledge has been made but no payments have been received, this field will be checked.</inlineHelpText>
        <label>Pending Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Affiliation__c</fullName>
        <description>Automatically populated field indicating the Account&apos;s primary Affiliation.It is populated based on the custom setting defined in opportunity</description>
        <inlineHelpText>Primary Affiliation for the Account.</inlineHelpText>
        <label>Primary Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>HED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Giving_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically Populated, Lookup to Primary Giving Level for this Account.</description>
        <inlineHelpText>Lookup to Primary Giving Level for this Account.</inlineHelpText>
        <label>Primary Giving Level</label>
        <referenceTo>rC_Giving__Giving_Level__c</referenceTo>
        <relationshipLabel>Accounts (Primary Giving Level)</relationshipLabel>
        <relationshipName>Accounts_Primary_Giving_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Active_Date__c</fullName>
        <description>Automatically populated field indicating the Active Date for the primary membership on the account.</description>
        <inlineHelpText>Automatically populated field indicating the Active Date for the primary membership on the account.</inlineHelpText>
        <label>Primary Membership Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Expiration_Date__c</fullName>
        <description>Automatically populated field indicating the Expiration Date for the primary membership on the account.</description>
        <inlineHelpText>Automatically populated field indicating the Expiration date for the Primary memberdship on the Account.</inlineHelpText>
        <label>Primary Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Status__c</fullName>
        <description>Automatically populated field indicating the Status for the Primary membership on the Account.</description>
        <inlineHelpText>Status for the Primary memberdship on the Account.</inlineHelpText>
        <label>Primary Membership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Calendar_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Giving Amount from all Hard Credit enabled Gifts within most recently Prior Calendar Year tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Prior Calendar Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Calendar_Year_Hard_Credit_Count__c</fullName>
        <description>Total Count of all Hard Credit enabled Gifts within most recently Prior Calendar Year tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Prior Calendar Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Amount across all Prior flagged Summaries (one per record type) tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Dollar value of gifts on Account where Hard Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Count__c</fullName>
        <description>Total count of Giving directly related to all Prior flagged Summaries (one per record type) tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Number of gifts on Account where Hard Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto checked if Major Gift flag on Prior flagged membership summary set to true.</description>
        <inlineHelpText>Account had a Major Gift during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto checked if Sustainer flag on Prior flagged membership summary set to true.</description>
        <inlineHelpText>Account had a Sustaining Gift during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Account where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Account where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Account where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Amount__c</fullName>
        <description>Total of Amount field from related Credit records for most recently prior Calendar Year. Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Dollar value of gifts on Account where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Count__c</fullName>
        <description>Count of related Soft Credit records for most recently prior Calendar Year.Check Track Soft Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Number of gifts on Account where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Recalculate_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag needs to be true for the Recalculate Giving Batch job to process the record.</description>
        <inlineHelpText>Checked, this field deletes and recalculates all giving summaries related to this Account.</inlineHelpText>
        <label>Recalculate Giving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Affiliations_Status__c</fullName>
        <description>Formula field indicating status of Affiliation information on Account. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Affiliations__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Affiliations__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Affiliation information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Affiliations Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Affiliations__c</fullName>
        <description>Indicates the date and time from the most recently updated Affiliation record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Affiliation record.</inlineHelpText>
        <label>Rollup Affiliations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits_Status__c</fullName>
        <description>Status of Hard Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Hard_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Hard_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Hard Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Hard Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Hard_Credits__c</fullName>
        <description>The Value is set to null so that the record get picked up for processing.</description>
        <inlineHelpText>Used in code for internal purpose.</inlineHelpText>
        <label>Rollup Hard Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits_Status__c</fullName>
        <description>Status of Recognition Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Recognition_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Recognition_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of Recognition Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Recognition Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Recognition Credit record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Recognition Credit record.</inlineHelpText>
        <label>Rollup Recognition Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits_Status__c</fullName>
        <description>Status of Soft Credit information on Account. Status of &apos;Ok&apos; means data is up to date.Once the update is completed , &quot;Rollup Soft Credits&quot; is set to time it was processed</description>
        <formula>IF(NOT(rC_Giving__Track_Soft_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Soft_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Soft Credit information on Account. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Soft Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Soft_Credits__c</fullName>
        <description>The Value is set to null so that it&apos;s picked for processing.</description>
        <inlineHelpText>Used in code for internal purpose.</inlineHelpText>
        <label>Rollup Soft Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Summaries_Status__c</fullName>
        <description>Status of Summaries information. Status of &apos;Ok&apos; means data is up to date. Once the update is completed , &quot;Rollup Summaries &quot; is set to time it was processed.</description>
        <formula>IF(NOT(rC_Giving__Track_Summaries__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Summaries__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Summaries information. Status of &apos;Ok&apos; means data is up to date</inlineHelpText>
        <label>Rollup Summaries Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Summaries__c</fullName>
        <description>The Value is set to null so that the records gets picked up for processing.</description>
        <inlineHelpText>Used in code for internal purpose.</inlineHelpText>
        <label>Rollup Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Affiliations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates Affiliations should be tracked if checked.</description>
        <inlineHelpText>Should Affiliations be tracked?</inlineHelpText>
        <label>Track Affiliations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Hard_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Hard Credit information on Account.</description>
        <inlineHelpText>Should Track and display Hard Credit information on Account enabled ?.</inlineHelpText>
        <label>Track Hard Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Recognition_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Recognition Credit information on Account.</description>
        <inlineHelpText>Track and display Recognition Credit information on Account.</inlineHelpText>
        <label>Track Recognition Credits?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>